namespace ConsoleGui
{
    public enum BorderType
    {
        None, Classic
    }
}