@startuml

abstract class Element {
    # Parent : Element
    + Size : ElemSize
    + Position : ElemPos
    
    + Render()
    + GetAbsolutePos() : ElemPos
    + OnFocus()
    + OnBlur()
    + OnHover()
    + OnScroll()
}

Element <|-- Box
Box *-- Element
class Box {
    + Children : List<Element>
    + BorderType : BorderType
}

Element <|-- TextInput
class TextInput {
    + Prompt : string
    + Value: string
}

Element <|-- Text
class Text {
    + Text : string
    + Wrap : bool
}

class ElemSize {
    + Height : int
    + Width : int
}

class ElemPos {
    + X : int
    + Y : int
}

enum BorderType {
    None
    Classic
}

@enduml